--- a/src/tomtom/www/css/tomtom.css
+++ b/src/tomtom/www/css/tomtom.css
@@ -26,19 +26,21 @@ input[type=button], input [type=submit]
     color: rgb(255, 255, 255);
     font-family: sans-serif;
     border-color: transparent;
+    border-style: solid;
 }
 
 input[type=text]
 {
     font-family: sans-serif;
     border-color: transparent;
+    border-style: solid;
 }
 
 .topRow {
     top:0px;
     left:0px;
     width: 100%;
-    height:45px;
+    height:30px;
 }
 
 .topBar {
@@ -77,6 +79,7 @@ input[type=text]
 .feedsBar {
     clear:none;
     float:left;
+    top:45px;
     max-width:250px;
     width:18%;
     margin:0px auto;
@@ -93,6 +96,7 @@ input[type=text]
     clear:none;
     float:right;
     padding: 5px;
+    margin-top:5px;
 }
 
 .feedsListContainer {
@@ -119,7 +123,8 @@ input[type=text]
     text-overflow: ellipsis;
     clear:left;
     float:left;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
+    width:100%;
 }
 
 .unreadItemNumberContainer {
@@ -134,6 +139,7 @@ input[type=text]
     max-width:960px;
     width:80%;
     margin-left:23%;
+    margin-top:10px;
 }
 
 .recentItemPair {
